# DiSalvoFranza_ProgettoSO

./: AtomUtils.c  AtomUtils.h  CMakeLists.txt  ConfigUtils.c  ConfigUtils.h  CustomTypes.h  KeyUtils.c  KeyUtils.h  MessageUtils.c  MessageUtils.h  NodeUtils.c  NodeUtils.h  NumberUtils.c  NumberUtils.h  SemaphoreUtils.c  SemaphoreUtils.h  SharedMemoryUtils.c  SharedMemoryUtils.h  SignalUtils.c  SignalUtils.h  StringUtils.c  StringUtils.h  activator.c  atom.c  config.txt  inhibitor.c  master.c  supply.c
